Added floor and component

--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,10 @@
   pointer-events: none;
 }
 
+.lift{
+  position: absolute;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
