--- a/src/components /Floor/Floor.css
+++ b/src/components /Floor/Floor.css
@@ -1,16 +1,20 @@
-.floor{
-    background-color: rgb(161, 235, 248);
-    border-radius: 5px;
-    width: 140%;
-    height: 120px;
-    margin: 10px auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    text-align: right;
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap');
+
+.floor {
+  background: rgb(71, 70, 70);
+  border-radius: 5px;
+  width: 100%;
+  height: 120px;
+  margin: 10px auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.floors__container{
-    display: flex;
-    flex-direction: column;
+
+.floor__number__heading{
+position: absolute;
+opacity: 0.3;
+font-size: 50px;
+font-family: 'Orbitron', sans-serif;
 }
