--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,10 @@
   border: 1px solid lightgreen;
 }
 
+.footer{
+  padding: 20px;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
