--- a/src/components /Floor/Floor.css
+++ b/src/components /Floor/Floor.css
@@ -18,3 +18,8 @@ opacity: 0.3;
 font-size: 50px;
 font-family: 'Orbitron', sans-serif;
 }
+.app_heading {
+  font-size: 50px;
+  text-decoration-line: underline;
+  text-decoration-color: darkolivegreen;
+}
